deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: coffeesoftware-show-api
  name: coffeesoftware-show-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coffeesoftware-show-api
  template:
    metadata:
      labels:
        app: coffeesoftware-show-api
    spec:
      containers:
        - image: gcr.io/bootiful/coffeesoftware-show-api
          imagePullPolicy: Always
          name: coffeesoftware-show-api

          startupProbe:
            failureThreshold: 120
            periodSeconds: 120
            httpGet:
              port: 8080
              path: /actuator/health/readiness

          readinessProbe:
            failureThreshold: 120
            periodSeconds: 120
            httpGet:
              port: 8080
              path: /actuator/health/readiness

          livenessProbe:
            failureThreshold: 120
            periodSeconds: 120
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "2Gi"
            requests:
              memory: "2Gi"
